Se agrega el readme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,19 @@
 services:
-  dynamodb:
+  dynamodb-local:
     image: amazon/dynamodb-local
-    container_name: dynamodb-local
     ports:
-      - "8005:8000"
-    volumes:
-      - dynamodb-data:/home/dynamo/data
+      - "8000:8000"
     environment:
-      - DB_PATH=/home/dynamo/data
-    command: "-jar DynamoDBLocal.jar -sharedDb -port 8000"
+      - "AWS_ACCESS_KEY_ID=test"
+      - "AWS_SECRET_ACCESS_KEY=test"
+    command: -jar DynamoDBLocal.jar -sharedDb
 
-  app:
+  loan-microservice:
     build: .
-    container_name: loan-microservice
     ports:
       - "3000:3000"
     depends_on:
-      - dynamodb
+      - dynamodb-local
     environment:
       - AWS_REGION=us-east-2
       - AWS_ACCESS_KEY_ID=dummy
